@@ -94,6 +94,7 @@ public class TezProcessorContextImpl extends TezTaskContextImpl implements Proce
   @Override
   public void setProgress(float progress) {
     runtimeTask.setProgress(progress);
+    notifyProgress();
   }
 
   @Override
